--- a/dynamic-logger-service-api/src/main/app/mule-deploy.properties
+++ b/dynamic-logger-service-api/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Thu Jul 26 14:41:54 PDT 2018
+#Sun Aug 26 00:39:06 PDT 2018
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=api.xml,error-handling.xml
 domain=default
+config.resources=api.xml,error-handling.xml,web-admin-ui.xml
